# CaeliCrawler

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.21.0  API_AUDIT_INDEX.md  API_AUDIT_REPORT.md  AUDIT_SUMMARY.txt  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_V2.md  DEVELOPMENT_NOTES.md  DISCREPANCIES_LIST.md  ENTITY_MATCHING_AUDIT_REPORT.md  ENTITY_MATCHING_IMPLEMENTATION.md  GENERIC_FACETTYPE_IMPLEMENTATION.md  HELP_VIEW_I18N_KEYS.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  PERFORMANCE_AUDIT_2026.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TRANSLATION_PROGRESS.md  TRANSLATION_SUMMARY.md  TYPE_HINTS_IMPLEMENTATION_GUIDE.md  TYPE_HINTS_QUICK_REFERENCE.md  TYPE_HINTS_STATUS.md  TYPE_HINTS_SUMMARY.md  add_return_types.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  translation_replacements.txt
backend/: .dockerignore  Dockerfile  IMPLEMENTATION_PLAN.md  celerybeat-schedule  check_scores.py  cleanup_and_smart_query.py  full_setup.py  populate_embeddings.py  pyproject.toml  requirements.txt  run_complete_setup.py  run_smart_query.py  run_smart_query_import.py  run_smart_query_quiet.py  run_sq.py  run_step_by_step.py  test_smart_query.py  test_smart_query2.py  test_smart_query3.py
backend/alembic/: env.py
backend/alembic/versions/: a9844496194e_initial_migration.py  (+92 more)
backend/app/: __init__.py  config.py  countries.py  database.py  main.py
backend/crawlers/: __init__.py  api_crawler.py  base.py  entity_api_crawler.py  filters.py  news_crawler.py  oparl_crawler.py  robots_txt.py  rss_crawler.py  sharepoint_crawler.py  unified_crawler.py  website_crawler.py
backend/external_apis/: __init__.py  base.py  entity_linking.py  sync_service.py
backend/processors/: __init__.py
backend/scripts/: README_duplicate_cleanup.md  README_municipality_import.md  audit_contact_facets.py  cleanup_duplicate_municipalities.py  cleanup_duplicate_types.py  cleanup_invalid_facet_types.py  create_admin.py  diagnose_llm_costs.py  generate_entity_embeddings.py  import_austrian_municipalities.py  import_locations.py  import_missing_german_municipalities.py  import_municipalities.py  import_wikidata_gemeinden.py  import_wikidata_uk.py  merge_duplicate_entity_types.py  merge_duplicate_locations.py  migrate_to_entity_references.py  repair_datasources_wikidata.py  scan_entity_duplicates.py  seed_data.py  seed_entity_facet_system.py  seed_locations.py  seed_uk_data.py  smoke_test_duplicates.py  smoke_test_fixes.py  sync_municipalities_from_sources.py  update_attribute_titles.py
backend/services/: __init__.py  ai_client.py  ai_service.py  api_facet_sync_service.py  assistant_service.py  attachment_analysis_service.py  attachment_service.py  change_tracker.py  credentials_resolver.py  dashboard_service.py  document_page_filter.py  entity_api_sync_service.py  entity_data_facet_service.py  entity_facet_service.py  entity_matching_service.py  event_extraction_service.py  facet_history_service.py  insights_service.py  llm_budget_service.py  llm_client_service.py  llm_usage_analytics_service.py  llm_usage_tracker.py  model_pricing_service.py  multi_entity_extraction_service.py  pysis_facet_service.py  pysis_service.py  relevance_checker.py  security_event_service.py  smart_query_service.py  translations.py  wizard_service.py
backend/tests/: __init__.py  conftest.py
backend/workers/: __init__.py  ai_tasks.py  api_facet_sync_tasks.py  api_template_tasks.py  async_runner.py  celery_app.py  crawl_preset_tasks.py  crawl_tasks.py  export_tasks.py  external_api_tasks.py  maintenance_tasks.py  notification_tasks.py  processing_tasks.py  summary_tasks.py
(+1245 files in other folders)
